@@ -56,7 +56,7 @@
         <exec_method
             name='start'
             type='method'
-            exec='/lib/svc/method/site/__SYSVINIT_NAME__ start'
+            exec='__SMF_METHOD_DIR__/__SYSVINIT_NAME__ start'
             timeout_seconds='60'>
             <method_context/>
         </exec_method>
